fixed font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ html, body {
 h1 {
     font-family: belwe;
     color: #527356;
+    text-align: center;
       text-shadow:
          -1px -1px 0 #fff,
           1px -1px 0 #fff,
@@ -152,7 +153,6 @@ table {
   color: black;
   font-size: 100%;
   border-radius: 10px !important;
-  position: relative;
   margin-bottom: 88px;
 }
 
@@ -168,7 +168,6 @@ thead tr th{
   border:0px;
   color: #fff;
   font-weight: normal;
-  position: sticky;
 }
 
 thead tr th:nth-child(1){
@@ -229,8 +228,13 @@ tbody tr td:nth-child(5) {
     margin-bottom: 36px;
   } */
 
+  h1 {
+    font-size: 2rem !important;
+    /* text-align: center; */
+  }
+
   #game_data table, p {
-    font-size: 85%
+    font-size: 85%;
   }
 
   img {
